Fix text overflow

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -327,6 +327,7 @@ html, body, .container-fluid, .row-fluid, .col-md-2, .col-md-10, .col-md-9, .col
   border-top-style: solid;
   border-top-color: #CFD1D1;
   border-top-width: 1px;
+  overflow: hidden;
 }
 
 
